[package]
name = "overture_maps_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
geo = { workspace = true }
geozero = { workspace = true }
geo-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
schemafy = "0.6.0"
serde_yaml = "0.9.25"
walkdir = "2.3.3"
schemafy_lib = "0.6.0"
